syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package services.events.v1;

message EventRequest {
    message Entry {
        google.protobuf.Timestamp key = 9;
        string value = 10;
    }
    string text = 1;
    string name = 2;
    repeated Entry lineup = 3;
    google.protobuf.Timestamp start_date = 4;
    google.protobuf.Timestamp publish_date = 5;
    optional string id = 6;
}

service EventRequestsService {
    rpc AddEventRequest(EventRequest) returns (google.protobuf.Empty);
    rpc UpdateEventRequest(EventRequest) returns (google.protobuf.Empty);
    rpc GetAllEventRequests(google.protobuf.Empty) returns (stream EventRequest);
}
